manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: game2048
  name: game2048
  namespace: game2048
spec:
  type: NodePort
  selector:
    app: game2048
  ports:
  - name: http-8080
    port: 8080
    targetPort: http-8080
    protocol: TCP
