manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game2048
  namespace: game2048
spec:
  rules:
  - host: ${GAME2048_INGRESS_HOST}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: game2048
            port: 
              name: http-8080
